--- a/contact-backend/.env.example
+++ b/contact-backend/.env.example
@@ -1,4 +1,3 @@
-DATABASE_URL=mongodb://localhost:27017/contactdb
-PORT=3000
-NODE_ENV=development
-SECRET_KEY=your_secret_key_here
+PORT=4000
+MONGO_URI=mongodb://localhost:27017/contactdb
+APP_NAME=ContactBackend
