--- a/contact-backend/package.json
+++ b/contact-backend/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "contact-backend",
-  "version": "1.0.0",
-  "description": "Backend for the contact page of a website using Express.js and MongoDB.",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "test": "jest"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.10.9",
-    "dotenv": "^8.2.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "jest": "^26.6.0",
-    "supertest": "^6.1.0"
-  },
-  "author": "Your Name",
-  "license": "ISC"
+    "name": "contact-backend",
+    "version": "1.0.0",
+    "main": "src/index.js",
+    "license": "MIT",
+    "scripts": {
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "test": "jest"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.18.2",
+        "helmet": "^7.0.0",
+        "mongoose": "^7.5.0",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22",
+        "jest": "^29.0.0",
+        "supertest": "^6.3.3"
+    }
 }
